# bip329

./: CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: CI.yaml
src/: encryption.rs  error.rs  from.rs  label.rs  lib.rs  serde_util.rs
src/error/: ffi.rs
test/: loop_back_test.rs
tests/: encryption_test.rs  loop_back_test.rs
tests/data/: encrypted_labels.age  labels.jsonl  test_vector.jsonl
