[package]
authors = ["Praveen Perera <me@praveenperera.com>"]
name = "bip329"
version = "0.2.0"
edition = "2021"
description = "A library for working with BIP329 labels"
license = "Apache-2.0"

repository = "https://github.com/bitcoinppl/bip329"
keywords = ["bitcoin", "bip329", "labels"]

homepage = "https://github.com/bitcoinppl/bip329"
documentation = "https://docs.rs/bip329"

[features]
default = ["encryption"]
encryption = ["dep:age", "dep:hex"]
uniffi = ["dep:uniffi"]

[dependencies]
# ser/de
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# error handling
thiserror = "2.0"

# encryption (feature)
age = { version = "0.11", optional = true }
hex = { version = "0.4", optional = true }

# uniffi (feature)
uniffi = { version = "0.29", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
