[package]
authors = ["Praveen Perera <me@praveenperera.com>"]
name = "bip329"
version = "0.4.0"
edition = "2021"
description = "A library for working with BIP329 labels"
license = "Apache-2.0"

repository = "https://github.com/bitcoinppl/bip329"
keywords = ["bitcoin", "bip329", "labels"]

homepage = "https://github.com/bitcoinppl/bip329"
documentation = "https://docs.rs/bip329"

[features]
default = []
encryption = ["dep:age", "dep:hex"]

[dependencies]
# ser/de
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# bitcoin types
bitcoin = { version = "0.32.0", features = ["serde"], default-features = false }

# error handling
thiserror = "2.0"

# encryption (feature)
age = { version = "0.11", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
